force-app/main/default/objects/EBEvent__c/EBEvent__c.object-meta.xml
<CustomObject>
    <description
  >Object contains records from Eventbrite event details. Records are populated via API calls.</description>
    <label>Eventbrite Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eventbrite Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>