force-app/main/default/objects/EBEvent__c/fields/attending__c.field-meta.xml
<CustomField>
    <fullName>attending__c</fullName>
    <description>Number of attendees with status Attending</description>
    <inlineHelpText>Number of attendees with status Attending</inlineHelpText>
    <label># Attending</label>
    <summaryFilterItems>
        <field>EBAttendee__c.status__c</field>
        <operation>equals</operation>
        <value>Attending</value>
    </summaryFilterItems>
    <summaryForeignKey>EBAttendee__c.EBEvent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>