force-app/main/default/objects/EBEvent__c/fields/capacity__c.field-meta.xml
<CustomField>
    <fullName>capacity__c</fullName>
    <description
  >Maximum number of tickets for the Event that can be sold to Attendees. The total capacity is calculated by the sum of the quantity_total of the Ticket Class.</description>
    <inlineHelpText
  >Maximum number of tickets for the Event that can be sold to Attendees. The total capacity is calculated by the sum of the quantity_total of the Ticket Class.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>