force-app/main/default/objects/EBEvent__c/fields/capacity_is_custom__c.field-meta.xml
<CustomField>
    <fullName>capacity_is_custom__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >true = Use custom capacity value to specify the maximum number of Attendees for the Event. False = Calculate the maximum number of Attendees for the Event from the total of all Ticket Class capacities.</description>
    <inlineHelpText
  >true = Use custom capacity value to specify the maximum number of Attendees for the Event. False = Calculate the maximum number of Attendees for the Event from the total of all Ticket Class capacities.</inlineHelpText>
    <label>Custom Capacity</label>
    <type>Checkbox</type>
</CustomField>