force-app/main/default/objects/EBEvent__c/fields/changed__c.field-meta.xml
<CustomField>
    <fullName>changed__c</fullName>
    <description
  >Date and time of most recent changes to the Event.</description>
    <inlineHelpText
  >Date and time of most recent changes to the Event.</inlineHelpText>
    <label>Changed</label>
    <type>DateTime</type>
</CustomField>