force-app/main/default/objects/EBEvent__c/fields/checked_in__c.field-meta.xml
<CustomField>
    <fullName>checked_in__c</fullName>
    <description>Number of attendees with status Checked In</description>
    <inlineHelpText>Number of attendees with status Checked In</inlineHelpText>
    <label># Checked In</label>
    <summaryFilterItems>
        <field>EBAttendee__c.status__c</field>
        <operation>equals</operation>
        <value>Checked In</value>
    </summaryFilterItems>
    <summaryForeignKey>EBAttendee__c.EBEvent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>