force-app/main/default/objects/EBEvent__c/fields/created__c.field-meta.xml
<CustomField>
    <fullName>created__c</fullName>
    <description>Event creation date and time.</description>
    <inlineHelpText>Event creation date and time.</inlineHelpText>
    <label>Created</label>
    <type>DateTime</type>
</CustomField>