force-app/main/default/objects/EBEvent__c/fields/eventend__c.field-meta.xml
<CustomField>
    <fullName>eventend__c</fullName>
    <description>Event end date and time.</description>
    <inlineHelpText>Event end date and time.</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>