force-app/main/default/objects/EBEvent__c/fields/eventid__c.field-meta.xml
<CustomField>
    <fullName>eventid__c</fullName>
    <description>Eventbrite Event Identifier</description>
    <inlineHelpText>Eventbrite Event Identifier</inlineHelpText>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>