force-app/main/default/objects/EBEvent__c/fields/eventname__c.field-meta.xml
<CustomField>
    <fullName>eventname__c</fullName>
    <description>Event name</description>
    <inlineHelpText>Event name</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>