force-app/main/default/objects/EBEvent__c/fields/eventstart__c.field-meta.xml
<CustomField>
    <fullName>eventstart__c</fullName>
    <description>Event start date and time.</description>
    <inlineHelpText>Event start date and time.</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>