force-app/main/default/objects/EBEvent__c/fields/listed__c.field-meta.xml
<CustomField>
    <fullName>listed__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >true = Allows the Event to be publicly searchable on the Eventbrite website.</description>
    <inlineHelpText
  >true = Allows the Event to be publicly searchable on the Eventbrite website.</inlineHelpText>
    <label>Listed</label>
    <type>Checkbox</type>
</CustomField>