force-app/main/default/objects/EBEvent__c/fields/not_attending__c.field-meta.xml
<CustomField>
    <fullName>not_attending__c</fullName>
    <description>Number of attendees with status Not Attending</description>
    <inlineHelpText
  >Number of attendees with status Not Attending</inlineHelpText>
    <label># Not Attending</label>
    <summaryFilterItems>
        <field>EBAttendee__c.status__c</field>
        <operation>equals</operation>
        <value>Not Attending</value>
    </summaryFilterItems>
    <summaryForeignKey>EBAttendee__c.EBEvent__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>