force-app/main/default/objects/EBEvent__c/fields/organization_id__c.field-meta.xml
<CustomField>
    <fullName>organization_id__c</fullName>
    <description>Event is owned by this Organization.</description>
    <inlineHelpText>Event is owned by this Organization.</inlineHelpText>
    <label>Organization Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>