force-app/main/default/objects/EBEvent__c/fields/published__c.field-meta.xml
<CustomField>
    <fullName>published__c</fullName>
    <description>Event publication date and time.</description>
    <inlineHelpText>Event publication date and time.</inlineHelpText>
    <label>Published</label>
    <type>DateTime</type>
</CustomField>