force-app/main/default/objects/EBEvent__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description
  >Event status. Can be draft, live, started, ended, completed and canceled.</description>
    <inlineHelpText
  >Event status. Can be draft, live, started, ended, completed and canceled.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
            </value>
            <value>
                <fullName>live</fullName>
            </value>
            <value>
                <fullName>started</fullName>
            </value>
            <value>
                <fullName>ended</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>