force-app/main/default/objects/EBEvent__c/fields/summary__c.field-meta.xml
<CustomField>
    <fullName>summary__c</fullName>
    <description
  >Event summary. Short summary describing the event and its purpose.</description>
    <inlineHelpText
  >Event summary. Short summary describing the event and its purpose.</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>