force-app/main/default/objects/EBEvent__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <description
  >URL of the Event&apos;s Listing page on eventbrite.com.</description>
    <inlineHelpText
  >URL of the Event&apos;s Listing page on eventbrite.com.</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>