force-app/main/default/objects/EBEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>eventstart__c</columns>
    <columns>eventend__c</columns>
    <columns>status__c</columns>
    <columns>url__c</columns>
    <columns>capacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>